Revision history for Spreadsheet-HTML

0.32

0.31
    - updated docs example tables
    - added animate literal parameter

0.30
    - added animate
    - added timer for conway

0.29
    - new param for checkerboard: extra
    - conway impacts th tags now
    - better fade for conway
    - better overrides for presets

0.28
    - updated/corrected docs

0.27
    - Tag and Dynamic Parameters merge hash attrs now
    - updated docs
    - more correct calculator implementation

0.26
    - added calculator
    - minify javascripts
    - conway accepts jquery and fade params

0.25
    - fixed checkerboard bug
    - fixed use presets by method bug
    - added (very simple) tests for presets

0.24
    - corrected ownership typo
    - added licenses to auxilary mods

0.23
    - added shroom and conway to Presets
    - fill can now easily pad data via items below:
    - added _max_cols and _max_rows
    - refactored _args to allow stray array refs among named args

0.22
    - removed deprecated methods
    - added chess, checkers, and checkerboard to Presets
    - moved layout to Presets
    - added Spreadsheet::HTML::Presets

0.21
    - added fill parameter
    - fixed hidden bug: headings incorrectly clobbered th attrs

0.20
    - tgroup only uses <tfoot> section when its value > 1
    - td and th parameters now accept code refs
    - -rowX overrides -colX and -colX now impacts headings
    - added level parameter (for indentation)
    - pinhead now consistent with thetas -90 and 180

0.19
    - added pinhead attr to produce sensible rotations
    - -rowX and -colX accepts array ref to
        allow subs and hashes (no longer either/or)
    - layout is now a method

0.18
    - added north(), east(), west() and south()
    - deprecated transpose, flip, mirror, reverse, earthquake and tsunami
    - renamed -row_X and -col_X to -rowX and -colX
    - added theta and flip arguments
    - all front end generating methods call generate() now